--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 .App {
   text-align: center;
+  color: white ;
+  background-color: #1F2235 ;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,16 +12,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -40,7 +29,11 @@ form{
 
 }
 
+.row {
+gap: 25px;
+display: flex;
 
+}
 
 @keyframes App-logo-spin {
   from {
